--- a/LTW_PHP/style.css
+++ b/LTW_PHP/style.css
@@ -46,12 +46,17 @@ input[type=submit]:hover {
 
 .square1{
     width: 50px;
+    display: inline-block;
     height: 50px;
+    margin-left: 5px;
+    
     background-color: cyan;
 }
 
 .square2{
     width: 50px;
+    display: inline-block;
+    margin-left: 5px;
     height: 50px;
     background-color: red;
 }
